wordpress/tls/wordpress-ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  # To use tls
  tls:
  - hosts:
    - cccr.exam.com
    # tls-secret has tls key and crt value.
    secretName: tls-secret
  rules:
  - host: cccr.exam.com
    http:
      paths:
      - path: /
        backend:
          # connect the service(wp-clusterip)
          serviceName: wp-clusterip
          servicePort: 80
